# librtsp

./: .MODULE_LICENSE_BSD  .clang-format  AUTHORS  CMakeLists.txt  COPYING  README.md  atom.mk
include/: librtsp.h
include/rtsp/: client.h  common.h  rtsp.h  rtsp_url.h  rtsp_url.hpp  server.h
src/: rtsp.c  rtsp.h  rtsp_auth.c  rtsp_base64.c  rtsp_client.c  rtsp_client_priv.h  rtsp_client_session.c  rtsp_log.c  rtsp_log.h  rtsp_priv.h  rtsp_server.c  rtsp_server_priv.h  rtsp_server_request.c  rtsp_server_session.c  rtsp_url.c  rtsp_url.cpp
src/internal/rtsp/: rtsp_internal.h
test/: rtsp_client_test.c  rtsp_server_test.c
tests/: rtsp_client_test.c  rtsp_server_test.c  rtsp_test.c  rtsp_test.h  rtsp_test_auth.c  rtsp_test_base64.c  rtsp_test_url.c  rtsp_test_url.cpp
tools/: rtsp_client_ingest_test.c  rtsp_client_test.c  rtsp_server_test.c
